--- a/Clientes/Views/Home/NuevoCliente.cshtml
+++ b/Clientes/Views/Home/NuevoCliente.cshtml
@@ -9,23 +9,23 @@
 <form>
     <div class="form-group">
         <label for="exampleFormControlInput1">Nombre</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+        <input id="Nombre" type="text" class="form-control"  placeholder="Nombre">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Cuenta</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Cuenta">
+        <input id="Cuenta"type="email" class="form-control" placeholder="Cuenta">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Contraseña</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Contraseña">
+        <input id="Contraseña" type="text" class="form-control"  placeholder="Contraseña">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Fecha de vencimiento de la Cuenta</label>@*validacion datetime*@
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="VencimientoC">
+        <input id="VencimientoC" type="datetime" class="form-control"  placeholder="VencimientoC">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Fecha de vencimiento del pago</label>@*validacion datetime*@
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="VencimientoP">
+        <input id="vencimientoP" type="datetime" class="form-control"  placeholder="VencimientoP">
     </div>
     <div class="form-group">
         <label for="exampleFormControlSelect1">Tipo</label>
@@ -38,7 +38,7 @@
     </div>
     <div class="form-group">
         <label for="exampleFormControlSelect1">Cantidad de pantallas</label>
-        <select class="form-control">
+        <select class="form-control" id="Pantallas">
             <option>1</option>
             <option>2</option>
             <option>3</option>
