--- a/Clientes/Views/Home/NuevoCliente.cshtml
+++ b/Clientes/Views/Home/NuevoCliente.cshtml
@@ -9,23 +9,26 @@
 <form>
     <div class="form-group">
         <label for="exampleFormControlInput1">Nombre</label>
-        <input id="Nombre" type="text" class="form-control"  placeholder="Nombre">
+        <input id="Nombre" type="text" class="form-control" placeholder="Nombre">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Cuenta</label>
-        <input id="Cuenta"type="email" class="form-control" placeholder="Cuenta">
+        <input id="Cuenta" type="email" class="form-control" placeholder="Cuenta">
+    </div><div class="form-group">
+        <label for="exampleFormControlInput1">Email</label>
+        <input id="Email" type="email" class="form-control" placeholder="Email">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Contraseña</label>
-        <input id="Contraseña" type="text" class="form-control"  placeholder="Contraseña">
+        <input id="Contraseña" type="text" class="form-control" placeholder="Contraseña">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Fecha de vencimiento de la Cuenta</label>@*validacion datetime*@
-        <input id="VencimientoC" type="datetime" class="form-control"  placeholder="VencimientoC">
+        <input id="VencimientoC" type="datetime" class="form-control" placeholder="VencimientoC">
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Fecha de vencimiento del pago</label>@*validacion datetime*@
-        <input id="vencimientoP" type="datetime" class="form-control"  placeholder="VencimientoP">
+        <input id="VencimientoP" type="datetime" class="form-control" placeholder="VencimientoP">
     </div>
     <div class="form-group">
         <label for="exampleFormControlSelect1">Tipo</label>
@@ -47,7 +50,7 @@
         </select>
     </div>
 
-   </form>
+</form>
 
 
-<button onclick="submit()">Enviar</button>
+<button onclick="Nuevo()">Enviar</button>
