Se agregaron las opciones  de Tipo (string)correctamente

--- a/Clientes/Views/Home/Editar.cshtml
+++ b/Clientes/Views/Home/Editar.cshtml
@@ -34,9 +34,9 @@
     <div class="form-group">
         <label for="exampleFormControlSelect1">Tipo</label>
         <select id="Tipo" class="form-control" value="@Model.Tipo">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
+            <option>@Tipo.Flow</option>
+            <option>@Tipo.IPTV</option>
+            <option>@Tipo.Netflix</option>
 
         </select>
     </div>
