--- a/Clientes/Views/Home/NuevoCliente.cshtml
+++ b/Clientes/Views/Home/NuevoCliente.cshtml
@@ -33,9 +33,9 @@
     <div class="form-group">
         <label for="exampleFormControlSelect1">Tipo</label>
         <select class="form-control" id="Tipo">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
+            <option>@Tipo.Flow</option>
+            <option>@Tipo.IPTV</option>
+            <option>@Tipo.Netflix</option>
 
         </select>
     </div>
