--- a/Clientes/Views/Shared/_Layout.cshtml
+++ b/Clientes/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Clientes - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Gestor de Cuentas - Roberto Bonfigli
         </div>
     </footer>
 
