--- a/Clientes/Views/User/Login.cshtml
+++ b/Clientes/Views/User/Login.cshtml
@@ -6,7 +6,7 @@
 <h1 class="text-center">¡Bienvenido!</h1>
 
 <h3>Login</h3>
-
+<div class="container container-fluid col">
   <div id="Message" class="alert alert-danger" role="alert" hidden></div>
   <div class="form-group">
     <label for="exampleInputEmail1">User</label>
@@ -17,3 +17,5 @@
     <input type="password" class="form-control" id="PasswordInput" name="Password">
   </div>
   <button id="LogInBtn" class="btn btn-primary">Submit</button>
+</div>
+
