--- a/Clientes/Views/Shared/_Layout.cshtml
+++ b/Clientes/Views/Shared/_Layout.cshtml
@@ -37,6 +37,16 @@
                     </ul>
                 </div>
             </div>
+            <div>
+                <nav class="navbar navbar-light bg-light">
+                    <a class="navbar-brand">Buscar Cliente</a>
+                    <form class="form-inline">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="Search">
+                        <button onclick="BuscarCliente()">Search</button>
+                    </form>
+                </nav>
+            </div>
+           
         </nav>
     </header>
     <div class="container">
