--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -3,10 +3,21 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1 class="titulo"> Clientes</h1>
 
-<h2>Nuevo cliente</h2>
-<button onclick="agregar()">Agregar</button>
+<div>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand"><h2>Buscar Cliente</h2></a>
+        <input class="form-control mr-sm-2" onkeyup="BuscarCliente()" type="search" aria-label="Search" id="Search">
+    </nav>
+</div>
+
+
+<a href="#>"<a onclick="agregar()" id="nuevo"class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Agregar"><i class="fas fa-plus-circle"></i></a>
+
+<a class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Buscar" href="#" id="buscar"><i class="fas fa-search"></i></a>
+
+
+
 
 <table id="customers">
     <tr>
@@ -19,13 +30,15 @@
         <th>Vencimiento Cliente</th>
         <th>Vencimiento Cuenta</th>
         <th>Pantallas</th>
+        <th>Comentario</th>
+        <th style="background-color:red">Borrar</th>
+        <th style="background-color:darkblue">Editar</th>
     </tr>
 
-
-    @foreach (var item in Model)//desconfigure la exepcion 
+    @foreach (var item in Model)//desconfigure la exepcion
     {
 
-        <tr id="@item.Id">
+        <tr id="@item.Id" class="DataRows">
             <td id="@item.Tipo.ToString()"></td>
             <td>@item.Id</td>
             <td>@item.Nombre</td>
@@ -35,23 +48,20 @@
             <td>@item.VencimientoC</td>
             <td>@item.VencimientoP</td>
             <td>@item.Pantallas</td>
+            <td>@item.Comentario</td>
 
             <td>
-                <div class="eliminar">
-                    <button onclick="Borrar('@item.Id')"></button>
-                </div>
-
+                <a onclick="Borrar('@item.Id')" id="confirm" class="IconBtn"><i class="fas fa-trash-alt" data-toggle="tooltip" data-placement="top" title="Eliminar"></i></a>
             </td>
-
             <td>
-                <div class="btne">
-                    <button onclick="Editar('@item.Id')">Editar</button>
-                </div>
+              <a onclick="Editar('@item.Id')" class="IconBtn" data-toggle="tooltip"><i class="far fa-edit"data-toggle="tooltip" data-placement="top" title="Editar"></i></a>
             </td>
         </tr>
+
+
     }
 
-    </table>
+</table>
 
 
 
