--- a/Clientes/Views/Home/NuevoCliente.cshtml
+++ b/Clientes/Views/Home/NuevoCliente.cshtml
@@ -9,14 +9,14 @@
 <form>
     <div class="form-group">
         <label for="exampleFormControlInput1">Nombre</label>
-        <input id="Nombre" type="text" class="form-control" placeholder="Nombre">
+        <input id="Nombre" type="text" class="form-control" placeholder="Nombre" >
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Cuenta</label>
-        <input id="Cuenta" type="email" class="form-control" placeholder="Cuenta">
+        <input id="Cuenta" type="text" class="form-control" placeholder="Cuenta">
     </div><div class="form-group">
         <label for="exampleFormControlInput1">Email</label>
-        <input id="Email" type="email" class="form-control" placeholder="Email">
+        <input id="Email" type="email" class="form-control" placeholder="Email" required>
     </div>
     <div class="form-group">
         <label for="exampleFormControlInput1">Contraseña</label>
@@ -27,30 +27,34 @@
         <input id="VencimientoC" type="datetime" class="form-control" placeholder="VencimientoC">
     </div>
     <div class="form-group">
-        <label for="exampleFormControlInput1">Fecha de vencimiento del pago</label>@*validacion datetime*@
+        <label for="exampleFormControlInput1">Fecha de vencimiento del Cliente</label>@*validacion datetime*@
         <input id="VencimientoP" type="datetime" class="form-control" placeholder="VencimientoP">
     </div>
     <div class="form-group">
         <label for="exampleFormControlSelect1">Tipo</label>
         <select class="form-control" id="Tipo">
-            <option>@Tipo.Flow</option>
-            <option>@Tipo.IPTV</option>
-            <option>@Tipo.Netflix</option>
-
+            <option value="2">@Tipo.Flow</option>
+            <option value="3">@Tipo.IPTV</option>
+            <option value="1">@Tipo.Netflix</option>
+            <option value="5">@Tipo.AmazonPrime</option>
+            <option value="4">@Tipo.DirecTVGo</option>
+            <option value="6">@Tipo.Spotify</option>
         </select>
     </div>
     <div class="form-group">
         <label for="exampleFormControlSelect1">Cantidad de pantallas</label>
-        <select class="form-control" id="Pantallas">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-        </select>
+            <input id="Pantallas" type="text" class="form-control" placeholder="Pantallas">
+    </div>
+
+
+    <div>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Comentario</label>
+            <textarea class="form-control" id="Comentario" rows="3"></textarea>
+        </div>
     </div>
 
 </form>
 
 
-<button onclick="Nuevo()">Enviar</button>
+<button onclick="Nuevo()" class="btn btn-outline-success btn-lg">Enviar</button>
