opciones de eliminar cliente

--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
             <td>@item.Comentario</td>
 
             <td>
-                <a onclick="Borrar('@item.Id')" id="confirm" class="IconBtn"><i class="fas fa-trash-alt" data-toggle="tooltip" data-placement="top" title="Eliminar"></i></a>
+                <a onclick="Borrar('@item.Id')" class="IconBtn"><i class="fas fa-trash-alt" data-toggle="tooltip" data-placement="top" title="Eliminar"></i></a>
             </td>
             <td>
               <a onclick="Editar('@item.Id')" class="IconBtn" data-toggle="tooltip"><i class="far fa-edit"data-toggle="tooltip" data-placement="top" title="Editar"></i></a>
