--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -4,70 +4,61 @@
 }
 
 
+
+
+<div>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand"><h2>Buscar Cliente</h2></a>
+        <input class="form-control mr-sm-2" onkeyup="BuscarCliente()" type="search" aria-label="Search" id="Search">
+    </nav>
+</div>
 <div class="row">
     <div class="col">
-        <a onclick="agregar()" id="nuevo" class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Agregar"><i class="fas fa-plus-circle"></i></a>
-        <a class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Buscar" href="#" id="buscar"><i class="fas fa-search"></i></a>
+        <a onclick="agregar()" id="nuevo" class="btn btn-" data-toggle="tooltip" data-placement="top" title="Agregar"><i class="fas fa-plus-circle"></i></a>
+        <a class="btn btn-" data-toggle="tooltip" data-placement="top" title="Buscar" href="#" id="buscar"><i class="fas fa-search"></i></a>
     </div>
 </div>
 
+<table id="customers" class="table table-responsive table-hover">
+    <tr id="tableHeader">
+        <th scope="col">Tipo</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Cuenta</th>
+        <th scope="col">Contraseña</th>
+        <th scope="col">Vencimiento Cuenta</th>
+        <th scope="col">Vencimiento Cliente</th>
+        <th scope="col">Pantallas</th>
+        <th scope="col">Comentario</th>
+        <th scope="col" style="background-color:red">Borrar</th>
+        <th scope="col" style="background-color:darkblue">Editar</th>
+    </tr>
 
-
-<div id="container">
-
-    <div>
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand"><h2>Buscar Cliente</h2></a>
-            <input class="form-control mr-sm-2" onkeyup="BuscarCliente()" type="search" aria-label="Search" id="Search">
-        </nav>
-    </div>
-
-    <table id="customers" class="table table-responsive table-hover">
-        <tr>
-            <th scope="col">Tipo</th>
-            <th scope="col">Id</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Cuenta</th>
-            <th scope="col">Email</th>
-            <th scope="col">Contraseña</th>
-            <th scope="col">Vencimiento Cuenta</th>
-            <th scope="col">Vencimiento Cliente</th>
-            <th scope="col">Pantallas</th>
-            <th scope="col">Comentario</th>
-            <th scope="col" style="background-color:red">Borrar</th>
-            <th scope="col" style="background-color:darkblue">Editar</th>
-        </tr>
-
-        @foreach (var item in Model)//desconfigure la exepcion
+    @foreach (var item in Model)//desconfigure la exepcion
         {
 
-        <tr id="@item.Id" class="DataRows">
-            <td>@item.Tipo.ToString()</td>
-            <td>@item.Id</td>
-            <td>@item.Nombre</td>
-            <td>@item.Cuenta</td>
-            <td>@item.Email</td>
-            <td>@item.Contraseña</td>
-            <td>@item.VencimientoC</td>
-            <td>@item.VencimientoP</td>
-            <td>@item.Pantallas</td>
-            <td>@item.Comentario</td>
+    <tr id="@item.Id" class="DataRows">
+        <td>@item.Tipo.ToString()</td>
+        @*<td>@item.Id</td>*@
+        <td>@item.Nombre</td>
+        <td>@item.Cuenta</td>
+        <td>@item.Contraseña</td>
+        <td>@item.VencimientoC</td>
+        <td>@item.VencimientoP</td>
+        <td>@item.Pantallas</td>
+        <td>@item.Comentario</td>
 
-            <td>
-                <a onclick="Borrar('@item.Id')" class="IconBtn"><i class="fas fa-trash-alt" data-toggle="tooltip" data-placement="top" title="Eliminar"></i></a>
-            </td>
-            <td>
-                <a onclick="Editar('@item.Id')" class="IconBtn" data-toggle="tooltip"><i class="far fa-edit" data-toggle="tooltip" data-placement="top" title="Editar"></i></a>
-            </td>
-        </tr>
+        <td>
+            <a onclick="Borrar('@item.Id')" class="IconBtn"><i class="fas fa-trash-alt" data-toggle="tooltip" data-placement="top" title="Eliminar"></i></a>
+        </td>
+        <td>
+            <a onclick="Editar('@item.Id')" class="IconBtn" data-toggle="tooltip"><i class="far fa-edit" data-toggle="tooltip" data-placement="top" title="Editar"></i></a>
+        </td>
+    </tr>
 
 
         }
 
-    </table>
-
-</div>
-
+</table>
 
 
 
