--- a/Clientes/Views/Shared/_Layout.cshtml
+++ b/Clientes/Views/Shared/_Layout.cshtml
@@ -36,14 +36,17 @@
                     </ul>
                 </div>
             </div>
-          
-           
+
+
         </nav>
     </header>
+
+    <div id="container">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+    </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
