--- a/Clientes/wwwroot/css/site.css
+++ b/Clientes/wwwroot/css/site.css
@@ -65,27 +65,29 @@ body {
 /*tabla styles*/
 
 #container{
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
-
+td{
+    height: 50%;
+}
 #customers {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-family:"Trebuchet MS"; Arial; Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
     #customers td, #customers th {
         border: 1px solid #ddd;
-        padding: 8px;
+        padding: 1px;
     }
 
-/*    #customers tr:nth-child(even) {
+    #customers tr:nth-child(even) {
         background-color: #f2f2f2;
-    }*/
+    }
 
     #customers tr:hover {
-        background-color: #ddd;
+        background-color: #ddd; 
     }
 
 #customers th {
@@ -112,16 +114,20 @@ body {
 
 #buscar {
     position: fixed;
-    margin-left:1%;
-    margin-top:1%;
+    z-index: 2;
+    width:3%;
+    margin-left: -3%;
+    background-color:cadetblue;
 }
 
 
 #nuevo {
     position: fixed;
-    margin-left:1%;
-    margin-top:4%
-
+    z-index: 1;
+    margin-top: 3.5%;
+    width: 3%;
+    margin-left: -3%;
+    background-color:cadetblue;
 }
 
 
