Filtros por nombre null y comentario Libre listo

--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -16,7 +16,10 @@
 </nav>
 
 
-
+<div >
+    <button onclick="cuentasLibre()" class="btn-success" id="Libres">Libres</button>
+    <button onclick="BuscarCliente()" class="btn-success" id="Search">Todas</button>
+</div>
 
 
 <div class="row">
