--- a/Clientes/Views/Home/Editar.cshtml
+++ b/Clientes/Views/Home/Editar.cshtml
@@ -51,7 +51,7 @@
     <div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Comentario</label>
-            <textarea class="form-control" id="Comentario" rows="3"></textarea>
+            <textarea class="form-control" id="Comentario" rows="3" value="@Model.Comentario"></textarea>
         </div>
     </div>
 
