--- a/Clientes/Views/Home/Editar.cshtml
+++ b/Clientes/Views/Home/Editar.cshtml
@@ -51,7 +51,7 @@
     <div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Comentario</label>
-            <textarea class="form-control" id="Comentario" rows="3" placeholder="@Model.Comentario"value="@Model.Comentario"></textarea>
+            <input id="Comentario" value="@Model.Comentario"class="form-control"  rows="3" placeholder="@Model.Comentario">
         </div>
     </div>
 
