botones con la funcion de buscar por cuenta o por vencimiento

--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -15,7 +15,6 @@
     </div>
 </nav>
 
-
 <div >
     <button onclick="cuentasLibre()" class="btn-success" id="Libres">Libres</button>
     <button onclick="BuscarCliente()" class="btn-success" id="Search">Todas</button>
@@ -33,9 +32,9 @@
     <tr id="tableHeader">
         <th scope="col">Tipo</th>
         <th scope="col">Nombre</th>
-        <th scope="col">Cuenta</th>
+        <th scope="col"><button class="btn-success"onclick="BuscarCuenta()"id="CuentaN">Cuenta</button></th>
         <th scope="col">Contraseña</th>
-        <th scope="col">Vencimiento Cuenta</th>
+        <th scope="col"><button class="btn-success"onclick="BuscarPorFecha()" id="FechaVenci">Vencimiento Cuenta</button></th>
         <th scope="col">Vencimiento Cliente</th>
         <th scope="col">Pantallas</th>
         <th scope="col">Comentario</th>
