cambios de index

--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -34,8 +34,8 @@
         <th scope="col">Nombre</th>
         <th scope="col"><button class="btn-success"onclick="BuscarCuenta()"id="CuentaN">Cuenta</button></th>
         <th scope="col">Contraseña</th>
-        <th scope="col"><button class="btn-success"onclick="BuscarPorFecha()" id="FechaVenci">Vencimiento Cuenta</button></th>
-        <th scope="col">Vencimiento Cliente</th>
+        <th scope="col">Vencimiento Cuenta</th>
+        <th scope="col"><button class="btn-success" onclick="BuscarPorFecha()" id="FechaVenci">Vencimiento Cliente</button></th>
         <th scope="col">Pantallas</th>
         <th scope="col">Comentario</th>
         <th scope="col" style="background-color:red">Borrar</th>
