Agrego tipo Disney Plus

--- a/Clientes/Views/Home/Editar.cshtml
+++ b/Clientes/Views/Home/Editar.cshtml
@@ -38,6 +38,7 @@
             <option value="5">@Tipo.AmazonPrime</option>
             <option value="4">@Tipo.DirecTVGo</option>
             <option value="6">@Tipo.Spotify</option>
+            <option value="7">@Tipo.DisneyPlus</option>
 
         </select>
     </div>
