Agrego, filtro por fecha cuenta, hbomax y filtro por tipo de cuenta

--- a/Clientes/Views/Home/Editar.cshtml
+++ b/Clientes/Views/Home/Editar.cshtml
@@ -39,6 +39,7 @@
             <option value="4">@Tipo.DirecTVGo</option>
             <option value="6">@Tipo.Spotify</option>
             <option value="7">@Tipo.DisneyPlus</option>
+            <option value="8">@Tipo.HBOMax</option>
 
         </select>
     </div>
