--- a/Clientes/Views/Home/NuevoCliente.cshtml
+++ b/Clientes/Views/Home/NuevoCliente.cshtml
@@ -37,6 +37,7 @@
             <option value="4">@Tipo.DirecTVGo</option>
             <option value="6">@Tipo.Spotify</option>
             <option value="7">@Tipo.DisneyPlus</option>
+            <option value="8">@Tipo.DisneyPlus</option>
         </select>
     </div>
     <div class="form-group">
