Migracion .Net Core 3.1 y filtro por comentarios

--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
         <select id="opciFiltro" class="form-control">
             <option>Nombre</option>
             <option>Cuenta</option>
+            <option>Comentario</option>
         </select>
     </div>
 </nav>
