--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -11,11 +11,12 @@
         <select id="opciFiltro" class="form-control">
             <option>Nombre</option>
             <option>Cuenta</option>
+            <option>Comentario</option>
         </select>
     </div>
 </nav>
 
-<div >
+<div>
     <button onclick="cuentasLibre()" class="btn-success" id="Libres">Libres</button>
     <button onclick="BuscarCliente()" class="btn-success" id="Search">Todas</button>
 </div>
@@ -47,7 +48,7 @@
             </div>
         </th>
         <th scope="col">Nombre</th>
-        <th scope="col"><button class="btn-success"onclick="BuscarCuenta()"id="CuentaN">Cuenta</button></th>
+        <th scope="col"><button class="btn-success" onclick="BuscarCuenta()" id="CuentaN">Cuenta</button></th>
         <th scope="col">Contraseña</th>
         <th scope="col"><button class="btn-success" onclick="BuscarPorFechaCuenta()" id="FechaVenciCuenta">Vencimiento Cuenta</button></th>
         <th scope="col"><button class="btn-success" onclick="BuscarPorFecha()" id="FechaVenci">Vencimiento Cliente</button></th>
