Agrego nuevos tipos de plataformas

--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -43,6 +43,9 @@
                     <option value="6">@Tipo.Spotify</option>
                     <option value="7">@Tipo.DisneyPlus</option>
                     <option value="8">@Tipo.HBOMax</option>
+                    <option value="9">@Tipo.StarPlus</option>
+                    <option value="10">@Tipo.ParamountPlus</option>
+                    <option value="11">@Tipo.Telecentro</option>
                     <option value="0">Todas</option>
                 </select>
             </div>
