--- a/Clientes/Views/Home/NuevoCliente.cshtml
+++ b/Clientes/Views/Home/NuevoCliente.cshtml
@@ -37,7 +37,10 @@
             <option value="4">@Tipo.DirecTVGo</option>
             <option value="6">@Tipo.Spotify</option>
             <option value="7">@Tipo.DisneyPlus</option>
-            <option value="8">@Tipo.DisneyPlus</option>
+            <option value="8">@Tipo.HBOMax</option>
+            <option value="9">@Tipo.StarPlus</option>
+            <option value="10">@Tipo.ParamountPlus</option>
+            <option value="11">@Tipo.Telecentro</option>
         </select>
     </div>
     <div class="form-group">
