Agrego nuevos tipos

--- a/Clientes/Views/Home/Editar.cshtml
+++ b/Clientes/Views/Home/Editar.cshtml
@@ -43,6 +43,8 @@
             <option value="9">@Tipo.StarPlus</option>
             <option value="10">@Tipo.ParamountPlus</option>
             <option value="11">@Tipo.Telecentro</option>
+            <option value="12">@Tipo.CinemaPlus</option>
+            <option value="13">@Tipo.TvMundosDigital</option>
 
         </select>
     </div>
