--- a/Clientes/Views/Home/Index.cshtml
+++ b/Clientes/Views/Home/Index.cshtml
@@ -46,6 +46,8 @@
                     <option value="9">@Tipo.StarPlus</option>
                     <option value="10">@Tipo.ParamountPlus</option>
                     <option value="11">@Tipo.Telecentro</option>
+                    <option value="12">@Tipo.CinemaPlus</option>
+                    <option value="13">@Tipo.TvMundosDigital</option>
                     <option value="0">Todas</option>
                 </select>
             </div>
