--- a/Clientes/Views/Home/NuevoCliente.cshtml
+++ b/Clientes/Views/Home/NuevoCliente.cshtml
@@ -41,6 +41,8 @@
             <option value="9">@Tipo.StarPlus</option>
             <option value="10">@Tipo.ParamountPlus</option>
             <option value="11">@Tipo.Telecentro</option>
+            <option value="12">@Tipo.CinemaPlus</option>
+            <option value="13">@Tipo.TvMundosDigital</option>
         </select>
     </div>
     <div class="form-group">
