Agrego nuevo tipo devex cambio nombre wow

--- a/Clientes/Views/Home/NuevoCliente.cshtml
+++ b/Clientes/Views/Home/NuevoCliente.cshtml
@@ -41,8 +41,9 @@
             <option value="9">@Tipo.StarPlus</option>
             <option value="10">@Tipo.ParamountPlus</option>
             <option value="11">@Tipo.Telecentro</option>
-            <option value="12">@Tipo.CinemaPlus</option>
+            <option value="12">@Tipo.WOW</option>
             <option value="13">@Tipo.TvMundosDigital</option>
+            <option value="14">@Tipo.Devex</option>
         </select>
     </div>
     <div class="form-group">
