--- a/Clientes/Views/Home/Editar.cshtml
+++ b/Clientes/Views/Home/Editar.cshtml
@@ -43,8 +43,8 @@
             <option value="9">@Tipo.StarPlus</option>
             <option value="10">@Tipo.ParamountPlus</option>
             <option value="11">@Tipo.Telecentro</option>
-            <option value="12">@Tipo.WOW</option>
-            <option value="13">@Tipo.TvMundosDigital</option>
+            <option value="12">@Tipo.WOWPlus</option>
+            <option value="13">@Tipo.WOWTV</option>
             <option value="14">@Tipo.Devex</option>
         </select>
     </div>
